# rprocess

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/rprocess/: __init__.py  core.py  glob_rmprocessor.py
tests/: test_core.py  test_glob_rmprocessor.py  test_glob_rprocessor.py  test_types.py
